# statusbar_time_tracking

./: .gitignore  README.md  de.derfryday.statusbar-time-tracker.dist.plist  installer.sh  makefile  pyproject.toml  statusbar_time_tracker_app.py
StatusbarTimeTracker.app/Contents/: Info.plist  document.wflow
StatusbarTimeTracker.app/Contents/MacOS/: Automator Application Stub
StatusbarTimeTracker.app/Contents/_CodeSignature/: CodeResources
config/: statusbar_config.dist.json
src/statusbar_time_tracker/: Enum.py  Updater.py  Util.py  __init__.py  agent.py  app.py  updater.py  util.py
src/statusbar_time_tracker/resources/: statusbar_time_tracking.plist
