[tool.poetry]
name = "statusbar-time-tracker"
version = "0.2.0"
description = "smalltime time tracker for MacOS status bar"
authors = ["derfryday <contact@fryday.dev>"]
include = ["statusbar_time_tracker_app.py"]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
rumps = "^0.4.0"
requests = "^2.28.1"
pynput = "^1.7.6"
orjson = "^3.9.0"
urllib3 = "^2.0.4"

[tool.poetry.group.dev.dependencies]
nuitka = "^1.7.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
statusbar_time_tracker = "statusbar_time_tracker_app:main"

[virtualenvs]
create = true
in-project = true
